--- a/.github/workflows/native_full_build.yml
+++ b/.github/workflows/native_full_build.yml
@@ -19,7 +19,8 @@ jobs:
 
       - name: native build
         run: |
-          chmod +x cov_build.sh
+          chmod +x build_depencies.sh cov_build.sh
+          sh -e build_depencies.sh
           sh -e cov_build.sh
         env:
           GITHUB_TOKEN: ${{ secrets.RDKCM_RDKE }}
