RDK-55373:[RDKServices] Coverity integration with middleware component workflow
Reason for change: Coverity integration with middleware component workflow
Test Procedure: Verify checks in github
Risks: Low
Signed-off-by:AkshayKumar_Gampa AkshayKumar_Gampa@comcast.com

--- a/.github/workflows/native_full_build.yml
+++ b/.github/workflows/native_full_build.yml
@@ -19,7 +19,8 @@ jobs:
 
       - name: native build
         run: |
-          chmod +x cov_build.sh
+          chmod +x build_dependencies.sh cov_build.sh
+          sh -e build_dependencies.sh
           sh -e cov_build.sh
         env:
           GITHUB_TOKEN: ${{ secrets.RDKCM_RDKE }}
