RDKEMW-2689 L1 - Fixing the FirmwareUpdate test
Reason for change: remove test case for removed funtionlity RDKEMW-1591
Test Procedure: All FirmwareUpdate L1 unittest need to successful
Risks: Low
Priority: P1
Signed-off-by: ramkumar_prabaharan@comcast.com

--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -315,6 +315,7 @@ jobs:
           -DENABLE_DEEP_SLEEP
           -DENABLE_SET_WAKEUP_SRC_CONFIG
           -DENABLE_THERMAL_PROTECTION
+          -DDISABLE_SECURITY_TOKEN
           -DUSE_DRM_SCREENCAPTURE
           -DHAS_API_SYSTEM
           -DHAS_API_POWERSTATE
@@ -387,6 +388,7 @@ jobs:
           -DENABLE_DEEP_SLEEP
           -DENABLE_SET_WAKEUP_SRC_CONFIG
           -DENABLE_THERMAL_PROTECTION
+          -DDISABLE_SECURITY_TOKEN
           -DUSE_DRM_SCREENCAPTURE
           -DHAS_API_SYSTEM
           -DHAS_API_POWERSTATE
