Modifying L1-tests.yml

--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -549,6 +549,7 @@ jobs:
           '*/Tests/headers/*'
           '*/Tests/mocks/*'
           '*/Tests/L1Tests/tests/*'
+          '*/Thunder/*'
           -o filtered_coverage.info
           &&
           genhtml
