--- a/.github/workflows/native_full_build.yml
+++ b/.github/workflows/native_full_build.yml
@@ -19,8 +19,7 @@ jobs:
 
       - name: native build
         run: |
-          chmod +x build_dependencies.sh cov_build.sh
-          sh -e build_dependencies.sh
-          sh -e cov_build.sh
+          sh -x build_dependencies.sh
+          sh -x cov_build.sh
         env:
           GITHUB_TOKEN: ${{ secrets.RDKCM_RDKE }}
