--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -210,6 +210,7 @@ jobs:
           headers/ccec/drivers
           headers/network
           headers/proc
+          headers/opkg
           &&
           cd headers
           &&
@@ -253,6 +254,10 @@ jobs:
           telemetry_busmessage_sender.h
           maintenanceMGR.h
           pkg.h
+          opkg.h
+          opkg_message.h
+          opkg_cmd.h
+          opkg_download.h
           secure_wrapper.h
           wpa_ctrl.h
           proc/readproc.h
@@ -278,6 +283,8 @@ jobs:
           -DCMAKE_INSTALL_PREFIX="$GITHUB_WORKSPACE/install/usr"
           -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           -DCMAKE_CXX_FLAGS="
+          -fprofile-arcs
+          -ftest-coverage
           -DEXCEPTIONS_ENABLE=ON
           -DUSE_THUNDER_R4=ON
           -DTHUNDER_VERSION=4
@@ -326,6 +333,8 @@ jobs:
           -DCMAKE_DISABLE_FIND_PACKAGE_Udev=ON
           -DCMAKE_DISABLE_FIND_PACKAGE_RFC=ON
           -DCMAKE_DISABLE_FIND_PACKAGE_RBus=ON
+          -DLIBOPKG_LIBRARIES=""
+          -DLIBOPKG_INCLUDE_DIRS=""
           -DCMAKE_BUILD_TYPE=Debug
           -DDS_FOUND=ON
           -DHAS_FRONT_PANEL=ON
@@ -334,7 +343,7 @@ jobs:
           -DHIDE_NON_EXTERNAL_SYMBOLS=OFF
           -DPLUGIN_FIRMWAREUPDATE=OFF
           -DPLUGIN_MAINTENANCEMANAGER=OFF
-          -DPLUGIN_PACKAGER=OFF
+          -DPLUGIN_PACKAGER=ON
           &&
           cmake --build build/entservices-softwareupdate -j8
           &&
@@ -348,6 +357,8 @@ jobs:
           -DCMAKE_INSTALL_PREFIX="$GITHUB_WORKSPACE/install/usr"
           -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           -DCMAKE_CXX_FLAGS="
+          -fprofile-arcs
+          -ftest-coverage
           -DEXCEPTIONS_ENABLE=ON
           -DUSE_THUNDER_R4=ON
           -DTHUNDER_VERSION=4
@@ -399,6 +410,7 @@ jobs:
           -DCMAKE_DISABLE_FIND_PACKAGE_RFC=ON
           -DCMAKE_DISABLE_FIND_PACKAGE_RBus=ON
           -DCMAKE_BUILD_TYPE=Debug
+          -DPLUGIN_PACKAGER=ON
           -DDS_FOUND=ON
           -DRDK_SERVICES_L1_TEST=ON
           -DUSE_THUNDER_R4=ON
@@ -464,6 +476,7 @@ jobs:
           /tmp/block/sdb/device/model
           &&
           sudo chmod -R 777
+          /tmp/test/testApp/etc/apps/testApp_package.json
           /opt/rdk_maintenance.conf
           /opt/persistent/timeZoneDST
           /opt/standbyReason.txt
@@ -497,17 +510,17 @@ jobs:
         run: >
           PATH=$GITHUB_WORKSPACE/install/usr/bin:${PATH}
           LD_LIBRARY_PATH=$GITHUB_WORKSPACE/install/usr/lib:$GITHUB_WORKSPACE/install/usr/lib/wpeframework/plugins:${LD_LIBRARY_PATH}
-          GTEST_OUTPUT="json:$(pwd)/entservices-testframeworkL1TestResults.json"
+          GTEST_OUTPUT="json:$(pwd)/rdkL1TestResults.json"
           RdkServicesL1Test &&
-          cp -rf $(pwd)/entservices-testframeworkL1TestResults.json $GITHUB_WORKSPACE/entservices-testframeworkL1TestResultsWithoutValgrind.json &&
-          rm -rf $(pwd)/entservices-testframeworkL1TestResults.json
+          cp -rf $(pwd)/rdkL1TestResults.json $GITHUB_WORKSPACE/rdkL1TestResultsWithoutValgrind.json &&
+          rm -rf $(pwd)/rdkL1TestResults.json
 
       - name: Run unit tests with valgrind
         if: ${{ !env.ACT }}
         run: >
           PATH=$GITHUB_WORKSPACE/install/usr/bin:${PATH}
           LD_LIBRARY_PATH=$GITHUB_WORKSPACE/install/usr/lib:$GITHUB_WORKSPACE/install/usr/lib/wpeframework/plugins:${LD_LIBRARY_PATH}
-          GTEST_OUTPUT="json:$(pwd)/entservices-testframeworkL1TestResults.json"
+          GTEST_OUTPUT="json:$(pwd)/rdkL1TestResults.json"
           valgrind
           --tool=memcheck
           --log-file=valgrind_log
@@ -516,8 +529,8 @@ jobs:
           --track-fds=yes
           --fair-sched=try
           RdkServicesL1Test &&
-          cp -rf $(pwd)/entservices-testframeworkL1TestResults.json $GITHUB_WORKSPACE/entservices-testframeworkL1TestResultsWithValgrind.json &&
-          rm -rf $(pwd)/entservices-testframeworkL1TestResults.json
+          cp -rf $(pwd)/rdkL1TestResults.json $GITHUB_WORKSPACE/rdkL1TestResultsWithValgrind.json &&
+          rm -rf $(pwd)/rdkL1TestResults.json
 
       - name: Generate coverage
         if: ${{ matrix.coverage == 'with-coverage' && !env.ACT }}
@@ -526,21 +539,22 @@ jobs:
           &&
           lcov -c
           -o coverage.info
-          -d build/entservices-testframework
+          -d build/entservices-softwareupdate
           &&
           lcov
           -r coverage.info
           '/usr/include/*'
-          '*/build/entservices-testframework/_deps/*'
+          '*/build/entservices-softwareupdate/_deps/*'
           '*/install/usr/include/*'
           '*/Tests/headers/*'
           '*/Tests/mocks/*'
           '*/Tests/L1Tests/tests/*'
+          '*/Thunder/*'
           -o filtered_coverage.info
           &&
           genhtml
           -o coverage
-          -t "entservices-testframework coverage"
+          -t "entservices-softwareupdate coverage"
           filtered_coverage.info
 
       - name: Upload artifacts
@@ -551,12 +565,7 @@ jobs:
           path: |
             coverage/
             valgrind_log
-            entservices-testframeworkL1TestResultsWithoutValgrind.json
-            entservices-testframeworkL1TestResultsWithValgrind.json
+            rdkL1TestResultsWithoutValgrind.json
+            rdkL1TestResultsWithValgrind.json
           if-no-files-found: warn
 
-      - name: Coping results to /tmp/Gtest_Report/
-        if: ${{ !env.ACT }}
-        run: >
-          mkdir -p /tmp/Gtest_Report/ &&
-          cp -r valgrind_log entservices-testframeworkL1TestResultsWithoutValgrind.json entservices-testframeworkL1TestResultsWithValgrind.json coverage /tmp/Gtest_Report/
