--- a/Tests/L1Tests/CMakeLists.txt
+++ b/Tests/L1Tests/CMakeLists.txt
@@ -120,15 +120,15 @@ add_plugin_test_ex(PLUGIN_MAINTENANCEMANAGER tests/test_MaintenanceManager.cpp "
 
 add_library(${MODULE_NAME} SHARED ${TEST_SRC})
 
-if (RDK_SERVICES_L1_TEST)
-   find_library(TESTMOCKLIB_LIBRARIES NAMES L1TestMocklib)
-   if (TESTMOCKLIB_LIBRARIES)
-       message ("KKK3 Found mock libraries ${TESTMOCKLIB_LIBRARIES} library")
-       target_link_libraries(${MODULE_NAME} ${TESTMOCKLIB_LIBRARIES})
-   else (TESTMOCKLIB_LIBRARIES)
-       message ("KKK3 Require ${TESTMOCKLIB_LIBRARIES} library")
-   endif (TESTMOCKLIB_LIBRARIES)
-endif (RDK_SERVICES_L2_TEST)
+#if (RDK_SERVICES_L1_TEST)
+   #find_library(TESTMOCKLIB_LIBRARIES NAMES L1TestMocklib)
+   #if (TESTMOCKLIB_LIBRARIES)
+       #message ("KKK3 Found mock libraries ${TESTMOCKLIB_LIBRARIES} library")
+       #target_link_libraries(${MODULE_NAME} ${TESTMOCKLIB_LIBRARIES})
+   #else (TESTMOCKLIB_LIBRARIES)
+       #message ("KKK3 Require ${TESTMOCKLIB_LIBRARIES} library")
+   #endif (TESTMOCKLIB_LIBRARIES)
+#endif (RDK_SERVICES_L1_TEST)
 
 include_directories(${TEST_INC})
 
@@ -145,8 +145,6 @@ target_include_directories(${MODULE_NAME}
         ${CMAKE_SOURCE_DIR}/../entservices-testframework/Tests/mocks/thunder
         ${CMAKE_SOURCE_DIR}/../Thunder/Source/plugins
         )
-
-#install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
 install(TARGETS ${MODULE_NAME} DESTINATION lib)
 write_config(${PLUGIN_NAME})
