--- a/Tests/L1Tests/CMakeLists.txt
+++ b/Tests/L1Tests/CMakeLists.txt
@@ -123,10 +123,10 @@ add_library(${MODULE_NAME} SHARED ${TEST_SRC})
 if (RDK_SERVICES_L1_TEST)
    find_library(TESTMOCKLIB_LIBRARIES NAMES L1TestMocklib)
    if (TESTMOCKLIB_LIBRARIES)
-       message ("KKK3 Found mock libraries ${TESTMOCKLIB_LIBRARIES} library")
-       target_link_libraries(${PROJECT_NAME} ${TESTMOCKLIB_LIBRARIES})
+       message ("Found mock libraries ${TESTMOCKLIB_LIBRARIES} library")
+       target_link_libraries(${MODULE_NAME} ${TESTMOCKLIB_LIBRARIES})
    else (TESTMOCKLIB_LIBRARIES)
-       message ("KKK3 Require ${TESTMOCKLIB_LIBRARIES} library")
+       message ("Require ${TESTMOCKLIB_LIBRARIES} library")
    endif (TESTMOCKLIB_LIBRARIES)
 endif (RDK_SERVICES_L1_TEST)
 
