--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-testframework
           path: entservices-testframework
-          ref: feature/RDK-patch_cleanup_1
+          ref: develop
           token: ${{ secrets.RDKCM_RDKE }}
 
       - name: Apply patches ThunderTools
