--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -75,14 +75,14 @@ jobs:
 
       - name: Install packages
         run: >
-          sudo apt update
+          apt update
           &&
-          sudo apt install -y libsqlite3-dev libcurl4-openssl-dev valgrind lcov clang libsystemd-dev libboost-all-dev libwebsocketpp-dev meson libcunit1 libcunit1-dev curl protobuf-compiler-grpc libgrpc-dev libgrpc++-dev
+          apt install -y libsqlite3-dev libcurl4-openssl-dev valgrind lcov clang libsystemd-dev libboost-all-dev libwebsocketpp-dev meson libcunit1 libcunit1-dev curl protobuf-compiler-grpc libgrpc-dev libgrpc++-dev
 
       - name: Install GStreamer
         run: |
-           sudo apt update
-           sudo apt install -y libunwind-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
+           apt update
+           apt install -y libunwind-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
 
       - name: Build trower-base64
         run: |
@@ -92,7 +92,7 @@ jobs:
             cd trower-base64
             meson setup --warnlevel 3 --werror build
             ninja -C build
-            sudo ninja -C build install
+            ninja -C build install
 
       - name: Checkout Thunder
         if: steps.cache.outputs.cache-hit != 'true'
@@ -490,7 +490,7 @@ jobs:
 
       - name: Set up files
         run: >
-          sudo mkdir -p -m 777
+          mkdir -p -m 777
           /tmp/test/testApp/etc/apps
           /opt/persistent
           /opt/secure
@@ -518,7 +518,7 @@ jobs:
           if [ ! -f mknod /dev/sdb1 c 240 0 ]; then mknod /dev/sdb1 c 240 0; fi &&
           if [ ! -f mknod /dev/sdb2 c 240 0 ]; then mknod /dev/sdb2 c 240 0; fi
           &&
-          sudo touch
+          touch
           /tmp/test/testApp/etc/apps/testApp_package.json
           /opt/rdk_maintenance.conf
           /opt/persistent/timeZoneDST
@@ -543,7 +543,7 @@ jobs:
           /tmp/block/sdb/device/vendor
           /tmp/block/sdb/device/model
           &&
-          sudo chmod -R 777
+          chmod -R 777
           /tmp/test/testApp/etc/apps/testApp_package.json
           /opt/rdk_maintenance.conf
           /opt/persistent/timeZoneDST
@@ -566,9 +566,9 @@ jobs:
           &&
           cd /dev/disk/by-id/
           &&
-          sudo ln -s ../../sda /dev/disk/by-id/usb-Generic_Flash_Disk_B32FD507-0
+          ln -s ../../sda /dev/disk/by-id/usb-Generic_Flash_Disk_B32FD507-0
           &&
-          sudo ln -s ../../sdb /dev/disk/by-id/usb-JetFlash_Transcend_16GB_UEUIRCXT-0
+          ln -s ../../sdb /dev/disk/by-id/usb-JetFlash_Transcend_16GB_UEUIRCXT-0
           &&
           ls -l /dev/disk/by-id/usb-Generic_Flash_Disk_B32FD507-0
           &&
