--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-testframework
           path: entservices-testframework
-          ref: develop
+          ref: RDKEMW-4719_upto_date_validation
           token: ${{ secrets.RDKCM_RDKE }}
 
       - name: Apply patches ThunderTools
