For PR purpose added github.head_ref

--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -73,7 +73,7 @@ jobs:
       - name: ACK External Trigger
         run: |
            echo "Message: External Trigger Received for L1 Tests"
-           echo "Branch: ${{ inputs.caller_branch || github.ref_name }}"
+           echo "Branch: ${{ inputs.caller_branch || github.head_ref || github.ref_name }}"
 
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v1.13
@@ -130,7 +130,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
-          ref: ${{ inputs.caller_branch || github.ref_name }}
+          ref: ${{ inputs.caller_branch || github.head_ref || github.ref_name }}
 
       - name: Checkout googletest
         if: steps.cache.outputs.cache-hit != 'true'
