Adding description to caller_branch

--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -4,6 +4,7 @@ on:
   workflow_call:
     inputs:
       caller_branch:
+        description: "The branch name to checkout for the entservices-softwareupdate repository."
         required: false
         type: string
     secrets:
@@ -92,7 +93,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
-          ref: ${{ inputs.caller_branch || github.head_ref || github.ref_name || 'develop' }}
+          ref: ${{ inputs.caller_branch || github.ref_name || github.head_ref }}
 
       - name: Checkout entservices-testframework
         uses: actions/checkout@v3
