[RDKEMW-5410] RDKEMW-6572 : Compilation error was not reported for the PR branch (#129)
* Reffering to current branch

* For PR purpose added github.head_ref

* Fixing copilot review comments

* Adding description to caller_branch

* Adding develop branch in ref

* Modifying L1, L2 yml files

* Modifying README in Tests folder

* Modifying Branch to Trigger Source

--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -2,6 +2,11 @@ name: L1-tests
 
 on:
   workflow_call:
+    inputs:
+      caller_source:
+        description: "Specifies the source type (e.g., local or test framework) for the workflow."
+        required: true
+        type: string
     secrets:
       RDKCM_RDKE:
         required: true
@@ -69,6 +74,7 @@ jobs:
       - name: ACK External Trigger
         run: |
            echo "Message: External Trigger Received for L1 Tests"
+           echo "Trigger Source: ${{ inputs.caller_source }}"
 
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v1.13
@@ -121,6 +127,13 @@ jobs:
           token: ${{ secrets.RDKCM_RDKE }}
 
       - name: Checkout entservices-softwareupdate
+        if: ${{ inputs.caller_source == 'local' }}
+        uses: actions/checkout@v3
+        with:
+          path: entservices-softwareupdate
+
+      - name: Checkout entservices-softwareupdate-testframework
+        if: ${{ inputs.caller_source == 'testframework' }}
         uses: actions/checkout@v3
         with:
           repository: rdkcentral/entservices-softwareupdate
