--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -2,6 +2,11 @@ name: L2-tests
 
 on:
   workflow_call:
+    inputs:
+      caller_source:
+        description: "Specifies the source type (e.g., local or test framework) for the workflow."
+        required: true
+        type: string
     secrets:
       RDKCM_RDKE:
         required: true
@@ -39,6 +44,7 @@ jobs:
       - name: ACK External Trigger
         run: |
            echo "Message: External Trigger Received for L2 Tests"
+           echo "Trigger Source: ${{ inputs.caller_source }}"
 
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v1.13
@@ -83,6 +89,13 @@ jobs:
           ref: R4.4.3
 
       - name: Checkout entservices-softwareupdate
+        if: ${{ inputs.caller_source == 'local' }}
+        uses: actions/checkout@v3
+        with:
+          path: entservices-softwareupdate
+
+      - name: Checkout entservices-softwareupdate-testframework
+        if: ${{ inputs.caller_source == 'testframework' }}
         uses: actions/checkout@v3
         with:
           repository: rdkcentral/entservices-softwareupdate
