--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -1,4 +1,4 @@
-name: L2-tests
+name: L2-tests-SU
 
 on:
   workflow_call:
@@ -19,7 +19,7 @@ env:
   AUTOMATICS_PASSCODE: ${{ secrets. AUTOMATICS_PASSCODE}}
 
 jobs:
-  L2-tests:
+  L2-tests-SU:
     name: Build and run L2 tests
     runs-on: ubuntu-22.04
     strategy:
