--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -165,7 +165,7 @@ jobs:
           -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           -DGENERIC_CMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           &&
-          cmake --build build/ThunderTools -j8
+          cmake --build build/ThunderTools
           &&
           cmake --install build/ThunderTools
 
@@ -193,7 +193,7 @@ jobs:
           -DPORT=55555
           -DEXCEPTIONS_ENABLE=ON
           &&
-          cmake --build build/Thunder -j8
+          cmake --build build/Thunder
           &&
           cmake --install build/Thunder
 
@@ -222,7 +222,7 @@ jobs:
           -DCMAKE_INSTALL_PREFIX="$GITHUB_WORKSPACE/install/usr"
           -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           &&
-          cmake --build build/entservices-apis -j8
+          cmake --build build/entservices-apis
           &&
           cmake --install build/entservices-apis
 
@@ -320,7 +320,7 @@ jobs:
           -DBUILD_SHARED_LIBS=OFF
           -DCMAKE_POSITION_INDEPENDENT_CODE=ON
           &&
-          cmake --build build/googletest -j8
+          cmake --build build/googletest
           &&
           cmake --install build/googletest
 
@@ -384,7 +384,7 @@ jobs:
           -DHAS_RBUS
           -DENABLE_DEVICE_MANUFACTURER_INFO"
           &&
-          cmake --build build/mocks -j8
+          cmake --build build/mocks
           &&
           cmake --install build/mocks
 
@@ -461,7 +461,7 @@ jobs:
           -DPLUGIN_MAINTENANCEMANAGER=ON
           -DPLUGIN_PACKAGER=ON
           &&
-          cmake --build build/entservices-softwareupdate -j8
+          cmake --build build/entservices-softwareupdate
           &&
           cmake --install build/entservices-softwareupdate
 
@@ -534,7 +534,7 @@ jobs:
           -DUSE_THUNDER_R4=ON
           -DHIDE_NON_EXTERNAL_SYMBOLS=OFF
           &&
-          cmake --build build/entservices-testframework -j8
+          cmake --build build/entservices-testframework
           &&
           cmake --install build/entservices-testframework
 
