--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -140,7 +140,7 @@ jobs:
           -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           -DGENERIC_CMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           &&
-          cmake --build build/ThunderTools -j8
+          cmake --build build/ThunderTools
           &&
           cmake --install build/ThunderTools
 
@@ -167,7 +167,7 @@ jobs:
           -DPORT=9998
           -DEXCEPTIONS_ENABLE=ON
           &&
-          cmake --build build/Thunder -j8
+          cmake --build build/Thunder
           &&
           cmake --install build/Thunder
 
@@ -194,7 +194,7 @@ jobs:
           -DCMAKE_INSTALL_PREFIX="$GITHUB_WORKSPACE/install/usr"
           -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           &&
-          cmake --build build/entservices-apis -j8
+          cmake --build build/entservices-apis
           &&
           cmake --install build/entservices-apis
 
@@ -286,7 +286,7 @@ jobs:
           -DBUILD_SHARED_LIBS=OFF
           -DCMAKE_POSITION_INDEPENDENT_CODE=ON
           &&
-          cmake --build build/googletest -j8
+          cmake --build build/googletest
           &&
           cmake --install build/googletest
 
@@ -304,7 +304,7 @@ jobs:
           -I $GITHUB_WORKSPACE/entservices-testframework/Tests/headers
           -I $GITHUB_WORKSPACE/install/usr/include"
           &&
-          cmake --build build/mocks -j8
+          cmake --build build/mocks
           &&
           cmake --install build/mocks
 
@@ -375,7 +375,7 @@ jobs:
           -DDS_FOUND=ON
           -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
           &&
-          cmake --build build/entservices-softwareupdate -j8
+          cmake --build build/entservices-softwareupdate
           &&
           cmake --install build/entservices-softwareupdate
 
@@ -446,7 +446,7 @@ jobs:
           -DDS_FOUND=ON
           -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
           &&
-          cmake --build build/entservices-testframework -j8
+          cmake --build build/entservices-testframework
           &&
           cmake --install build/entservices-testframework
 
