RDKEMW-7169 - Gtest Add missing empty files

--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -285,6 +285,9 @@ jobs:
           telemetry_busmessage_sender.h
           maintenanceMGR.h
           pkg.h
+          edid-parser.hpp
+          drm.h
+          drm_mode.h
           opkg.h
           opkg_message.h
           opkg_cmd.h
