--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -247,6 +247,9 @@ jobs:
           systemaudioplatform.h
           maintenanceMGR.h
           pkg.h
+          edid-parser.hpp
+          drm.h
+          drm_mode.h
           btmgr.h
           tvError.h
           tvTypes.h
