--- a/Tests/L2Tests/CMakeLists.txt
+++ b/Tests/L2Tests/CMakeLists.txt
@@ -26,6 +26,10 @@ if(PLUGIN_FIRMWAREUPDATE)
     set(SRC_FILES ${SRC_FILES} tests/FirmwareUpdate_L2Test.cpp)
 endif()
 
+if(PLUGIN_MAINTENANCEMANAGER)
+set(SRC_FILES ${SRC_FILES} tests/MaintenancemanagerL2.cpp)
+endif()
+
 add_library(${MODULE_NAME} SHARED ${SRC_FILES})
 
 set_target_properties(${MODULE_NAME} PROPERTIES
